turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:5: error: not found: value ind
  ind = trouverColor(colors, c)
  ^LangtonsAnt:6: error: not found: value ind
  var nc = (ind+1)%nbc
            ^LangtonsAnt:7: error: not found: value ind
  var r = rule(ind)
               ^